<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/run_name_label"
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/run_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Laguna Run"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toStartOf="@+id/dictate_name"
                bind:layout_constraintStart_toEndOf="@+id/textView"
                bind:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/dictate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/micBackgroundOff"
                android:src="@drawable/ic_mic_white_24dp"
                android:tint="@color/micOff"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_mic_white_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/run_starting_point_label"
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/starting_point_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Penny Pines"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintEnd_toStartOf="@+id/dictate_starting_point"
                bind:layout_constraintStart_toEndOf="@+id/textView2"
                bind:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/dictate_starting_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/micBackgroundOff"
                android:src="@drawable/ic_mic_white_24dp"
                android:tint="@color/micOff"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_mic_white_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Difficulty:"
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/difficulty_spinner"
                android:layout_width="283dp"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:entries="@array/difficulty_array"
                android:prompt="@string/Difficulty_prompt"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHorizontal_bias="0.25"
                bind:layout_constraintStart_toEndOf="@+id/difficulty"
                bind:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Features"
                android:textSize="18sp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/loopVsOut_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/loopVsOut_arrays"
                android:prompt="@string/LoopVsOutAndBack_prompt"
                android:text="[Select a Feature..]"
                android:textAlignment="center"
                android:textColor="#808080"
                android:textSize="18sp"
                bind:layout_constraintEnd_toStartOf="@+id/space2"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/evenVsUneven_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/evenVsUneven_arrays"
                android:prompt="@string/EvenVsUneven_prompt"
                android:textAlignment="center"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toEndOf="@+id/space2"
                bind:layout_constraintTop_toTopOf="parent" />

            <Spinner

                android:id="@+id/flatVsHilly_spinner"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:entries="@array/flatVsHilly_arrays"
                android:prompt="@string/FlatVsHilly_prompt"
                android:textAlignment="center"
                bind:layout_constraintEnd_toEndOf="@+id/loopVsOut_spinner"
                bind:layout_constraintStart_toStartOf="@id/loopVsOut_spinner"
                bind:layout_constraintTop_toBottomOf="@+id/loopVsOut_spinner" />

            <Spinner
                android:id="@+id/streetVsTrail_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/streetVsTrail_arrays"
                android:prompt="@string/StreetsVsSTrail_prompt"
                android:textAlignment="center"
                bind:layout_constraintEnd_toEndOf="@+id/evenVsUneven_spinner"
                bind:layout_constraintHorizontal_bias="0.0"
                bind:layout_constraintStart_toStartOf="@+id/evenVsUneven_spinner"
                bind:layout_constraintTop_toBottomOf="@+id/evenVsUneven_spinner" />

            <Space
                android:id="@+id/space2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/features" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="Notes:"
            android:textSize="18sp"
            bind:layout_constraintBottom_toBottomOf="parent"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:configChanges="orientation|keyboardHidden"
                android:windowSoftInputMode="stateVisible"
                android:maxLength="500"
                bind:layout_constraintStart_toEndOf="@+id/textView3"
                bind:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="11dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>