...
    <string name="run_name_label">Name:</string>
    <string name="run_starting_point_label">Starting Point:</string>
    <string name="run_difficulty_label">Difficulty:</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="notification">Notifications</string>

    <string name="miles_text">%1$s Miles</string>
    <string name="steps_text">%1$s Steps</string>
    <string name="date_text">On: %1$s</string>
    <string name="time_text">Time: %1$s</string>
...
